[metadata]
name = PyNetioConf
version = 0.0.2.1
description = Universal module to control and configure all NETIO devices
long_description = file: README.md
long_description_content_type = text/markdown
author = NETIO Products
author_email = support@netio.eu
license = MIT
url = https://github.com/netioproducts/PyNetioConf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Natural Language :: English
    Development Status :: 3 - Alpha

[options]
package_dir =
    =src
python_requires = >=3.7
install_requires =
    requests
    setuptools
    websocket-client

[options.packages.find]
where = src
